ds2.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    deprecated.daemonset.template.generation: "3"
  creationTimestamp: "2021-12-21T21:16:26Z"
  generation: 4
  name: ds-two
  namespace: default
  resourceVersion: "346400"
  uid: 026975ad-6cf8-47cb-b452-db28c84246d1
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      system: DaemonSetOne
  template:
    metadata:
      creationTimestamp: null
      labels:
        system: DaemonSetOne
    spec:
      containers:
      - image: nginx:1.15.1
        imagePullPolicy: IfNotPresent
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  updateStrategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
status:
  currentNumberScheduled: 2
  desiredNumberScheduled: 2
  numberAvailable: 2
  numberMisscheduled: 0
  numberReady: 2
  observedGeneration: 4
  updatedNumberScheduled: 2
