simpleshell.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shell-demo
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: car-vol
      mountPath: /etc/cars
  volumes:
  - name: car-vol
    configMap:
      name: fast-car
    # env:
    # - name: ilike
    #   valueFrom:
    #     configMapKeyRef:
    #       name: colors
    #       key: favorite
    # envFrom:
    # - configMapRef:
    #     name: colors
