web-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-one
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.20.1
        ports:
        - containerPort: 80
          protocol: TCP
